@@ -58,8 +58,8 @@ public:
 protected:
   virtual Ptr<TcpSocketBase> Fork (); // Call CopyObject<TcpRfc793> to clone me
   virtual void DupAck (const TcpHeader& t, uint32_t count);
-  virtual void     SetSSThresh (uint32_t threshold);
-  virtual uint32_t GetSSThresh (void) const;
+  virtual void     SetInitialSSThresh (uint32_t threshold);
+  virtual uint32_t GetInitialSSThresh (void) const;
   virtual void     SetInitialCwnd (uint32_t cwnd);
   virtual uint32_t GetInitialCwnd (void) const;
 };
